* jpki-pdf-signer 1.2.3 ClientVMからServerVMに変更しました。
git-svn-id: https://svn.osdn.net/svnroot/jpki/jpki-pdf-signer/trunk@56 f30e787d-f73b-42d4-b4a2-d790b30a04d0